ARM/MCUXpresso/.metadata/.plugins/org.eclipse.cdt.ui/NS30DummyMove.build.log
11:26:50 **** Incremental Build of configuration Debug for project NS30DummyMove ****
make -j4 all 
Building file: ../work/sc0uart.cpp
Invoking: Cross ARM C++ Compiler
arm-none-eabi-g++ -mcpu=cortex-m3 -mthumb -mthumb-interwork -fmessage-length=0 -ffunction-sections -fdata-sections -fno-builtin -Wall  -g -DDEVICE_EMAC=1 -D__MBED__=1 -DDEVICE_I2CSLAVE=1 -DTARGET_LIKE_MBED -DTARGET_NXP -DTARGET_LPC176X -D__MBED_CMSIS_RTOS_CM -DDEVICE_RTC=1 -DDEVICE_LOCALFILESYSTEM=1 -D__CMSIS_RTOS -DDEVICE_USBDEVICE=1 -DDEVICE_WATCHDOG=1 -DTOOLCHAIN_GCC -DDEVICE_CAN=1 -DTARGET_LIKE_CORTEX_M3 -DTARGET_CORTEX_M -DARM_MATH_CM3 -DCOMPONENT_PSA_SRV_EMUL=1 -DDEVICE_ANALOGOUT=1 -DTARGET_NXP_EMAC -DCOMPONENT_PSA_SRV_IMPL=1 -DTARGET_M3 -DDEVICE_PWMOUT=1 -DDEVICE_INTERRUPTIN=1 -DTARGET_LPCTarget -DTARGET_CORTEX -DDEVICE_I2C=1 -DDEVICE_PORTOUT=1 -D__CORTEX_M3 -DDEVICE_STDIO_MESSAGES=1 -DTARGET_NAME=LPC1768 -DTARGET_LPC1768 -DTARGET_RELEASE -DCOMPONENT_NSPE=1 -DDEVICE_PORTINOUT=1 -DDEVICE_SERIAL_FC=1 -DDEVICE_USTICKER=1 -DTARGET_MBED_LPC1768 -DDEVICE_PORTIN=1 -DDEVICE_SLEEP=1 -DTOOLCHAIN_GCC_ARM -DDEVICE_RESET_REASON=1 -DDEVICE_SPI=1 -DDEVICE_ETHERNET=1 -DDEVICE_SPISLAVE=1 -DDEVICE_ANALOGIN=1 -DDEVICE_SERIAL=1 -DDEVICE_FLASH=1 -DDEVICE_SEMIHOST=1 -DMBED_BUILD_TIMESTAMP=1577317302.85 -DDEVICE_DEBUG_AWARENESS=1 -DDEVICE_MPU=1 -I"D:/_ishikawa/Develop/MCUXpresso/NS30DummyMove/" -I"D:/_ishikawa/Develop/MCUXpresso/NS30DummyMove//usr/src/mbed-sdk" -I"D:/_ishikawa/Develop/MCUXpresso/NS30DummyMove/mbed" -I"D:/_ishikawa/Develop/MCUXpresso/NS30DummyMove/mbed/TARGET_LPC1768" -I"D:/_ishikawa/Develop/MCUXpresso/NS30DummyMove/work" -I"D:/_ishikawa/Develop/MCUXpresso/NS30DummyMove/work/MODSERIAL" -I"D:/_ishikawa/Develop/MCUXpresso/NS30DummyMove/work/TextLCD" -include"D:/_ishikawa/Develop/MCUXpresso/NS30DummyMove/mbed_config.h" -std=gnu++98 -fabi-version=0 -fno-exceptions -DMBED_ROM_START=0x0 -DMBED_ROM_SIZE=0x80000 -DMBED_RAM_START=0x10000000 -DMBED_RAM_SIZE=0x8000 -DMBED_RAM1_START=0x2007c000 -DMBED_RAM1_SIZE=0x8000 -mthumb -DMBED_ROM_START=0x0 -DMBED_ROM_SIZE=0x80000 -DMBED_RAM_START=0x10000000 -DMBED_RAM_SIZE=0x8000 -DMBED_RAM1_START=0x2007c000 -DMBED_RAM1_SIZE=0x8000 -MMD -MP -MF"work/sc0uart.d" -MT"work/sc0uart.o" -c -o "work/sc0uart.o" "../work/sc0uart.cpp"
In file included from ../work/sc0uart.cpp:15:0:
../work/sc0uart.h:46:22: error: expected identifier before numeric constant
 #define  ACK         0x06        // ACK
                      ^
D:/_ishikawa/Develop/MCUXpresso/NS30DummyMove/mbed/I2C.h:56:9: note: in expansion of macro 'ACK'
         ACK   = 1
         ^~~
../work/sc0uart.h:46:22: error: expected '}' before numeric constant
 #define  ACK         0x06        // ACK
                      ^
D:/_ishikawa/Develop/MCUXpresso/NS30DummyMove/mbed/I2C.h:56:9: note: in expansion of macro 'ACK'
         ACK   = 1
         ^~~
../work/sc0uart.h:46:22: error: expected unqualified-id before numeric constant
 #define  ACK         0x06        // ACK
                      ^
D:/_ishikawa/Develop/MCUXpresso/NS30DummyMove/mbed/I2C.h:56:9: note: in expansion of macro 'ACK'
         ACK   = 1
         ^~~
In file included from D:/_ishikawa/Develop/MCUXpresso/NS30DummyMove/mbed/mbed.h:47:0,
                 from ../work/sc0uart.cpp:16:
D:/_ishikawa/Develop/MCUXpresso/NS30DummyMove/mbed/I2C.h:64:17: error: expected ')' before 'sda'
     I2C(PinName sda, PinName scl);
                 ^~~
D:/_ishikawa/Develop/MCUXpresso/NS30DummyMove/mbed/I2C.h:132:1: error: expected unqualified-id before 'protected'
 protected:
 ^~~~~~~~~
D:/_ishikawa/Develop/MCUXpresso/NS30DummyMove/mbed/I2C.h:140:1: error: expected declaration before '}' token
 } // namespace mbed
 ^
D:/_ishikawa/Develop/MCUXpresso/NS30DummyMove/mbed/I2C.h:136:18: warning: 'mbed::_owner' defined but not used [-Wunused-variable]
     static I2C  *_owner;
                  ^~~~~~
make: *** [work/subdir.mk:23: work/sc0uart.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

11:26:51 Build Failed. 7 errors, 1 warnings. (took 1s.58ms)

